<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_chats"
        android:title="@string/chats" />

    <item
        android:id="@+id/menu_ajustes"
        android:title="@string/ajustes" />

    <item
        android:id="@+id/menu_filtrar_genero"
        android:title="@string/filtrar_por_g_nero" />

    <item
        android:id="@+id/menu_filtrar_puesto"
        android:title="@string/filtrar_por_puesto" />
    <item
        android:id="@+id/menu_estadisticas"
        android:title="Estadísticas" />

    <item
        android:id="@+id/menu_voz"
        android:title="@string/menu_voz"
        android:icon="@drawable/ic_mic_24"
        app:showAsAction="ifRoom" />


</menu>
