<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_settings"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"/>

    <Button
        android:id="@+id/btn_delete_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete_account"
        android:backgroundTint="#FF4B4B"
        android:textColor="@color/white"
        android:layout_below="@id/settings_title"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_deactivate_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_deactivate_account"
        android:backgroundTint="#FFA500"
        android:textColor="@color/white"
        android:layout_below="@id/btn_delete_account"/>

    <TextView
        android:id="@+id/voice_settings_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voice_settings_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_below="@id/btn_deactivate_account"
        android:layout_marginTop="28dp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voice_settings_switch"
        android:layout_below="@id/voice_settings_label"
        android:layout_marginTop="12dp"
        android:textColor="@color/black" />
</RelativeLayout>
