<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/chatFoto"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/imagen_del_chat"
        android:scaleType="centerCrop"
        android:background="@drawable/image_border"
        android:src="@drawable/ic_launcher_foreground" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="12dp">

        <TextView
            android:id="@+id/chatNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_del_chat"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/chatUltimaFrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ltimo_mensaje"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnEditarChat"
        android:layout_width="59dp"
        android:layout_height="57dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/editar_nickname"
        android:src="@android:drawable/ic_menu_edit" />

</LinearLayout>