<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <!-- LOGO ARRIBA -->
    <ImageButton
        android:id="@+id/victoriaButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/perfil_de_victoria_serrano"
        android:scaleType="centerCrop"
        android:src="@drawable/victoriaserrano" />

    <ImageView
        android:id="@+id/logoApp"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_kollab"
        android:layout_marginTop="12dp"
        android:adjustViewBounds="true" />

    <!-- FLECHA IZQUIERDA me gusta -->
    <ImageView
        android:id="@+id/btnAceptar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:alpha="0.25"
        android:background="@android:color/transparent"
        android:src="@drawable/baseline_arrow_circle_left_24"
        android:contentDescription="@string/aceptar_perfil" />
    <TextView
        android:id="@+id/checkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnAceptar"
        android:layout_alignStart="@id/btnAceptar"
        android:layout_marginStart="25dp"
        android:layout_marginTop="-2dp"
        android:text="@string/mark"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="32sp"
        android:alpha="0.25" />

    <!-- FLECHA DERECHA descartar -->
    <ImageView
        android:id="@+id/btnDescartar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:alpha="0.25"
        android:background="@android:color/transparent"
        android:src="@drawable/baseline_arrow_circle_right_24"
        android:contentDescription="@string/descartar_perfil" />
    <TextView
        android:id="@+id/crossText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnDescartar"
        android:layout_alignEnd="@id/btnDescartar"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="-2dp"
        android:text="@string/x"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="32sp"
        android:alpha="0.25" />

    <!-- TARJETA DE PERFIL -->
    <LinearLayout
        android:id="@+id/cardPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:scaleType="centerCrop"
            android:background="@drawable/image_border"
            android:contentDescription="@string/foto_de_perfil" />

        <TextView
            android:id="@+id/profileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="22sp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/profileDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/darker_gray" />

        <Button
            android:id="@+id/viewProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/vesperfil" />
    </LinearLayout>
</RelativeLayout>
