<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- HEADER DEL CHAT -->

    <!-- CONTENEDOR DEL CHAT (AQUÍ IRÁ EL RECYCLERVIEW DE MENSAJES) -->
    <LinearLayout
        android:id="@+id/chat_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:background="@color/white"
        android:elevation="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- FOTO DEL PERFIL DEL CHAT (DINÁMICA) -->
        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/circle_background"
            android:contentDescription="@string/app_logo"
            android:scaleType="centerCrop" />

        <!-- NOMBRE DEL PERFIL DEL CHAT (DINÁMICO) -->
        <TextView
            android:id="@+id/chat_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/chat_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_below="@id/chat_header"
        android:layout_above="@id/chat_input_container">

        <TextView
            android:id="@+id/chat_start_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/hint_text"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:paddingTop="32dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chatRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="8dp"/>

    </LinearLayout>


    <!-- INPUT PARA ESCRIBIR MENSAJES -->
    <LinearLayout
        android:id="@+id/chat_input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:background="#EEEEEE"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input_message"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:hint="@string/hint_escribe_mensaje"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text"
            android:background="@color/white" />

        <ImageView
            android:id="@+id/send_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/send"
            android:contentDescription="@string/btn_enviar" />
    </LinearLayout>

</RelativeLayout>
